--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.1.0'
-    compile 'commons-io:commons-io:2.4'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.github.satyan:sugar:1.3'
 }
